css/styles.css
*{
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}
:root{
    --primary-color:#eaeff0;
    --secondary-color:#1a2841;
}
.dark_mode{
    --primary-color: #172046;
    --secondary-color:#fff;
}

body{
    padding: 10%;
    background-color: var(--primary-color);
    color: var(--secondary-color);
}
main{
    background: var(--primary-color);
    color: var(--secondary-color);
    padding: 2%;
}
.container {
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    -webkit-align-content: stretch;
    -ms-flex-line-pack: stretch;
    align-content: stretch;
    -webkit-align-items: flex-start;
    -ms-flex-align: start;
    align-items: flex-start;
    }

.menu {
    -webkit-order: 0;
    -ms-flex-order: 0;
    order: 0;
    -webkit-flex: 0 1 auto;
    -ms-flex: 0 1 auto;
    flex: 0 1 auto;
    -webkit-align-self: auto;
    -ms-flex-item-align: auto;
    align-self: auto;
    }

.maincontent {

    -webkit-order: 0;
    -ms-flex-order: 0;
    order: 0;
    -webkit-flex: 5 0 auto;
    -ms-flex: 5 0 auto;
    flex: 5 0 auto;
    -webkit-align-self: auto;
    -ms-flex-item-align: auto;
    align-self: auto;
    }

.weather {
    -webkit-order: 0;
    -ms-flex-order: 0;
    order: 0;
    -webkit-flex: 2 1 auto;
    -ms-flex: 2 1 auto;
    flex: 2 1 auto;
    -webkit-align-self: auto;
    -ms-flex-item-align: auto;
    align-self: auto;
    }
    #switcher{
        width: 50px;
height: 50px;
position: absolute;
right: 20px;
bottom: 20px;
    }

